[metadata]
name = boris
version = attr: boris._version.__version__
description = Bayesian deconvolution of nuclear spectra
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/op3/boris"
author = "Oliver Papst"
maintainer_email = opapst@ikp.tu-darmstadt.de
license = GPL
license_file = COPYING
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Operating System :: UNIX
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Physics
download_url = "https://github.com/op3/boris/releases"
keywords =
    analysis
    data-analysis
    gamma-spectroscopy
    nuclear-physics
    nuclear-spectrum-analysis
    physics
    python
    spectroscopy

[options]
packages = find:
install_requires =
    arviz>=0.10.0
    hist
    numpy
    pymc>=4.0.0
    tqdm
    uproot>=4.1.0
python_requires = >=3.10
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console scripts =
    boris = boris.boris_app:BorisApp
    boris2spec = boris.boris2spec_app:Boris2SpecApp
    makematrix = boris.makematrix_app:MakeMatrixApp
    sirob = boris.sirob_app:SirobApp
    checkmatrix = boris.checkmatrix_app:CheckMatrixApp

[options.extras_require]
test =
    flake8
    h5py
    pytest>=4.6
    pytest-cov

[aliases]
test = pytest

[tool:pytest]
addopts =
    --cov=boris
    --verbose
    --cov-report term-missing
    --tb native
    --strict-markers

[tool:isort]
profile = black
multi_line_output = 3

[flake8]
ignore = E203, W503, E501, E266, N, D200, D102, D105, D107, D401, D402, D205, D400, D301
max-complexity = 100
exclude = tests/*.py, setup.py, boris/__init__.py
per-file-ignores =
    __init__.py: F401, D104
